Fix of overflow

--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,10 @@ address {
   margin: 0;
 }
 
+section {
+  overflow: hidden;
+}
+
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
