--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -1,3 +1,7 @@
+section{
+  overflow: hidden;
+}
+
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
